feat(database): implement PlayerInfoReducer for handling player settings data